k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: products.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: products
                port:
                  number: 8080
