k8s/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: products
  labels:
    app: products
spec:
  to:
    kind: Service
    name: products
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
